# PhotoAlbumOR-v2

./: .gitignore  CMakeLists.txt  LICENCE  README.md
application/: CMakeLists.txt  FRRMAB-DK-qap.cpp  FRRMAB-NR-qap.cpp  FRRMAB-qap.cpp  main.cpp  mainMOEA.cpp  mainNGSA-II.cpp  mainNSGA-II.cpp  main_HC_First.cpp  moead-photoAlbum.cpp  moead-qap.cpp  moead.cpp
application/resources/knapsack/: ks_1000.txt  main_HC_First.cpp
application/resources/photo-album/: buildAlbum.py  disposition.py  extractInfo.py  tag-clarifay.py
application/resources/photo-album/templates/FirstTemplate/: album-6-2per3.json  info-photo.json  taglist.pkl
application/resources/photo-album/templates/FirstTemplate/html/: page_0.html  page_1.html  page_2.html  page_3.html  page_4.html  page_5.html  page_6.html  page_7.html  page_8.html
application/resources/photo-album/templates/FirstTemplate/solutions/: chronologic-order.sol  moead.sol
application/resources/qap/: instance100.txt  instance20.txt  instanceRl_100.txt  instanceUni_100.txt  instanceUni_Rl_100.txt
application/resources/qap/stats/: RStats.R  front_pa.txt  front_pa_frrmab.txt  front_pa_frrmab_dk.txt
cmake/module/: FindParadiseo.cmake
src/: CMakeLists.txt
src/algorithms/moead/: Solution.h  hyperVolume.h  init.h  moAlgo.h  moFRRMAB.h  moFRRMAB_DK.h  moFRRMAB_N.h  moFRRMAB_NR.h  moFRRMAB_N_FRR.h  moSolution.h  mutation.h  paretoFront.h  repair.h  scalarFunc.h  subProblems.h
src/problems/: CMakeLists.txt
src/problems/eval/: knapsackEval.h  knapsackIncrEval.h
src/problems/knapsack/eval/: knapsackEval.h  knapsackIncrEval.h
src/problems/knapsack/solution/: eoBitKnapsack.h  moBitKnapsackNeighbor.h
src/problems/mo-photo-album/: PhotoAlbum.cpp  PhotoAlbum.h  PhotoAlbum.hpp  PhotoAlbumEval.cpp  PhotoAlbumEval.h  PhotoAlbumEval.hpp  PhotoAlbumInit.h  PhotoAlbumObjectiveVector.h  PhotoAlbumObjectiveVectorTraits.cpp  PhotoAlbumObjectiveVectorTraits.h  PhotoAlbumObjectiveVectorTraits.hpp  PhotoAlbumOpCrossoverQuad.hpp  PhotoAlbumOpMutationExchange.h  PhotoAlbumOpMutationShift.h  PhotoAlbumParser.cpp  PhotoAlbumParser.hpp  make_eval_PhotoAlbum.h  make_genotype_PhotoAlbum.h  make_op_PhotoAlbum.h
src/problems/mo-photo-album/moead/: PhotoAlbumParser.hpp  Solution.h  init.h  moAlgo.h  moEval.h  moPhotoAlbumEval.h  moSolution.h  mutation.h  subProblems.h
src/problems/mo-photo-album/utils/: PhotoAlbumParser.h
src/problems/photo-album/eval/: moPhotoAlbumQAPIncrEval.h  photoAlbumQAPEval.h
src/problems/qap/moead/: QAPUniParser.hpp  moQAPEval.h
test/: CMakeLists.txt
